; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_envy24.c_envy24_gpio_i2c_ctl.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_envy24.c_envy24_gpio_i2c_ctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.envy24_delta_ak4524_codec = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@SDA_GPIO = common dso_local global i32 0, align 4
@SCL_GPIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32)* @envy24_gpio_i2c_ctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @envy24_gpio_i2c_ctl(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.envy24_delta_ak4524_codec*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.envy24_delta_ak4524_codec*
  store %struct.envy24_delta_ak4524_codec* %10, %struct.envy24_delta_ak4524_codec** %8, align 8
  %11 = load %struct.envy24_delta_ak4524_codec*, %struct.envy24_delta_ak4524_codec** %8, align 8
  %12 = getelementptr inbounds %struct.envy24_delta_ak4524_codec, %struct.envy24_delta_ak4524_codec* %11, i32 0, i32 0
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = call i32 @envy24_gpiord(%struct.TYPE_3__* %13)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* @SDA_GPIO, align 4
  %16 = load i32, i32* @SCL_GPIO, align 4
  %17 = or i32 %15, %16
  %18 = xor i32 %17, -1
  %19 = load i32, i32* %7, align 4
  %20 = and i32 %19, %18
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %5, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %3
  %24 = load i32, i32* @SCL_GPIO, align 4
  %25 = load i32, i32* %7, align 4
  %26 = add nsw i32 %25, %24
  store i32 %26, i32* %7, align 4
  br label %27

27:                                               ; preds = %23, %3
  %28 = load i32, i32* %6, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %27
  %31 = load i32, i32* @SDA_GPIO, align 4
  %32 = load i32, i32* %7, align 4
  %33 = add nsw i32 %32, %31
  store i32 %33, i32* %7, align 4
  br label %34

34:                                               ; preds = %30, %27
  %35 = load %struct.envy24_delta_ak4524_codec*, %struct.envy24_delta_ak4524_codec** %8, align 8
  %36 = getelementptr inbounds %struct.envy24_delta_ak4524_codec, %struct.envy24_delta_ak4524_codec* %35, i32 0, i32 0
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %36, align 8
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @envy24_gpiowr(%struct.TYPE_3__* %37, i32 %38)
  ret void
}

declare dso_local i32 @envy24_gpiord(%struct.TYPE_3__*) #1

declare dso_local i32 @envy24_gpiowr(%struct.TYPE_3__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
